[package]
name = "yt"
version = "0.2.0"
edition = "2021"
description = "Token-frugal YouTrack CLI for coding agents"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }

[profile.release]
lto = true
strip = true
