[package]
name = "yt"
version = "0.9.1"
edition = "2021"
description = "Token-frugal YouTrack CLI for coding agents"
license = "MIT"

[dependencies]
anstream = "0.6"
anstyle = "1"
anyhow = "1"
clap = { version = "4", features = ["derive", "color"] }
clap_complete = "4"
serde_json = "1"
sha2 = "0.10"
ureq = { version = "2", features = ["json"] }

[profile.release]
lto = true
strip = true
